--- a/index.html
+++ b/index.html
@@ -178,7 +178,37 @@
 			<!-- Carousel End-->
 		</header>
 		<!-- =========Header Section End===== -->
+		<!-- Main Section Start -->
+		<main>
+			<!-- Album Section Start -->
+			<section class="album container py-5">
+				<div class="row content pt-5 d-flex align-items-center">
+					<div class="col-lg-4 col-md-6 col-sm-12 left p-0">
+						<img
+							src="images/album.jpg"
+							class="img-fluid rounded-3"
+							alt="album"
+						/>
+					</div>
+					<div class="col-lg-8 col-md-6 col-sm-12 right px-5">
+						<h2>Memorable Events Organized By Us</h2>
+						<p class="pr-5 py-2">
+							We successfully organized & arranged many wedding Events Such as
+							Minister Wedding,Army Officer Wedding & so on.But Among All of
+							them The most memorable event is the wedding of presidents
+							Daughter.
+						</p>
+						<button class="btn btn-primary p-2">
+							Explore Our Memories
+							<img src="icons/arrow-forward 1.svg" class="ms-1" alt="arrow" />
+						</button>
+					</div>
+				</div>
+			</section>
 
+			<!-- Album Section Start -->
+		</main>
+		<!-- Main Section End -->
 		<!-- Bootstrap JS CDN Link -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
