--- a/index.html
+++ b/index.html
@@ -289,6 +289,68 @@
 				</div>
 			</section>
 			<!-- Package Section End-->
+			<!-- FAQ Section Start -->
+			<section class="faq container py-4 px-lg-5">
+				<h3 class="text-center my-5">Frequently Asked Questions</h3>
+			     <div class="row py-4 px-lg-5">
+					 <div class="col-sm-12 col-md-6">
+						<div class="accordion" id="accordionExample">
+							<div class="accordion-item">
+							  <h2 class="accordion-header" id="headingOne">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									What’s the difference between event design and event planning? 
+								</button>
+							  </h2>
+							  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+									Event design and event planning work hand in hand to deliver a successful event.Events by Knight offer tailor made events. This means we incorporate both event design and event planning to create that perfect event.
+								</div>
+							  </div>
+							</div>
+							<div class="accordion-item">
+							  <h2 class="accordion-header" id="headingTwo">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								  How Many Days in a week We give services?
+								</button>
+							  </h2>
+							  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+                                   We are available with our service all days in a week except Saturday.
+								</div>
+							  </div>
+							</div>
+							<div class="accordion-item">
+							  <h2 class="accordion-header" id="headingThree">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+									How early do we need to start planning an event
+								</button>
+							  </h2>
+							  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+                                  Usually You Need to informs us a week before your occations if you want to organize an events because we are busy guys handling occassions almost everyday.
+								</div>
+							  </div>
+							</div>
+							<div class="accordion-item">
+							  <h2 class="accordion-header" id="headingFour">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+									What is your refund and cancellation policy?
+								</button>
+							  </h2>
+							  <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+								<div class="accordion-body">
+                                    If we are not able to provide services even though you are charged then We refund You within a week.
+								</div>
+							  </div>
+							</div>
+						  </div>
+					 </div>
+					 <div class="col-sm-12 col-md-6">
+						 <img src="images/people.png" alt="people">
+					 </div>
+				 </div>
+			</section>
+			<!-- FAQ Section End-->
 		</main>
 		<!-- Main Section End -->
 		<!-- Bootstrap JS CDN Link -->
