--- a/index.html
+++ b/index.html
@@ -353,6 +353,45 @@
 			<!-- FAQ Section End-->
 		</main>
 		<!-- Main Section End -->
+
+		<!-- Footer Start -->
+       <footer class="mt-5 d-flex align-items-center justify-content-center">
+		   <div class="container d-flex align-items-center justify-content-between px-5">
+		  <h3>© 2020 bike. All rights reserved</h3>
+		  <div class="social d-flex flex-column">
+               <h3>Get the App</h3>
+			   <button class="btn btn-outline-light  py-2 my-2 d-flex align-items-center justify-content-center">
+			   <a href="https://www.apple.com/apple-one/" class="d-flex align-items-center text-decoration-none text-light p-0">
+				<i class="fab fa-apple me-2"></i>
+                 <div class="info p-0 m-0 ">
+					 <p class="m-0 p-0">Download on the</p>
+					 <h3 class="m-0 p-0">App Store</h3>
+
+				 </div>
+			   </a>
+
+			   </button>
+			   <button class="btn btn-outline-light  px -0 py-2 my-2 d-flex align-items-center">
+			   <a href="https://play.google.com/store/apps/details?id=org.telegram.messenger" class="d-flex align-items-center text-decoration-none text-light p-0">
+				
+			<svg xmlns="http://www.w3.org/2000/svg" class="me-1" viewBox="0 0 40 40"  width="20px" height="48px"><path fill="#4db6ac" d="M7.705,4.043C7.292,4.15,7,4.507,7,5.121c0,1.802,0,18.795,0,18.795S7,42.28,7,43.091c0,0.446,0.197,0.745,0.5,0.856l20.181-20.064L7.705,4.043z"/><path fill="#dce775" d="M33.237,18.36l-8.307-4.796c0,0-15.245-8.803-16.141-9.32C8.401,4.02,8.019,3.961,7.705,4.043l19.977,19.84L33.237,18.36z"/><path fill="#d32f2f" d="M8.417,43.802c0.532-0.308,15.284-8.825,24.865-14.357l-5.601-5.562L7.5,43.947C7.748,44.038,8.066,44.004,8.417,43.802z"/><path fill="#fbc02d" d="M41.398,23.071c-0.796-0.429-8.1-4.676-8.1-4.676l-0.061-0.035l-5.556,5.523l5.601,5.562c4.432-2.559,7.761-4.48,8.059-4.653C42.285,24.248,42.194,23.5,41.398,23.071z"/></svg>
+			
+                 <div class="info p-0 m-0 ">
+					 <p class="m-0 p-0">Get it on</p>
+					 <h3 class="m-0 p-0">Google Play</h3>
+
+				 </div>
+			   </a>
+
+			   </button>
+			
+			 
+		  </div>
+		  </div>
+	   </footer>
+
+
+		<!-- Footer End -->
 		<!-- Bootstrap JS CDN Link -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
