Responsive for mobile done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<!-- Custom Css Link -->
 		<link rel="stylesheet" href="style.css" />
 		<!-- ============================= -->
+		<!-- Responsive Css -->
+		<link rel="stylesheet" href="responsive.css">
+		<!-- ====================== -->
 	</head>
 	<body>
 		<!-- Header Section Start -->
@@ -41,7 +44,7 @@
 			<!-- Navigation Bar Start -->
 
 			<nav class="navbar navbar-expand-lg navbar-light container pt-3 py-4">
-				<div class="container">
+				<div class="container-lg">
 					<a class="navbar-brand" href="#">Royal Convention Center</a>
 					<button
 						class="navbar-toggler"
@@ -181,7 +184,7 @@
 		<!-- Main Section Start -->
 		<main>
 			<!-- Album Section Start -->
-			<section class="album container py-5">
+			<section class="album container-lg py-5">
 				<div class="row content pt-5 d-flex align-items-center">
 					<div class="col-lg-4 col-md-6 col-sm-12 left p-0">
 						<img
@@ -190,9 +193,9 @@
 							alt="album"
 						/>
 					</div>
-					<div class="col-lg-8 col-md-6 col-sm-12 right px-5">
+					<div class="col-lg-8 col-md-6 col-sm-12 right px-lg-5 px-sm-3 ">
 						<h2>Memorable Events Organized By Us</h2>
-						<p class="pr-5 py-2">
+						<p class="py-2">
 							We successfully organized & arranged many wedding Events Such as
 							Minister Wedding,Army Officer Wedding & so on.But Among All of
 							them The most memorable event is the wedding of presidents
@@ -202,6 +205,7 @@
 							Explore Our Memories
 							<img src="icons/arrow-forward 1.svg" class="ms-1" alt="arrow" />
 						</button>
+						
 					</div>
 				</div>
 			</section>
@@ -291,7 +295,7 @@
 			<!-- Package Section End-->
 			  <!-- Clients Feedback Start-->
 			  <section class="feedback container py-4">
-				  <h2 class="text-center my-5">Clients Testimonial</h2>
+				  <h2 class="text-center my-lg-5">Clients Testimonial</h2>
 				  <div class="container py-5 d-flex justify-content-center text-center flex-wrap">
 					  <div class="card__item shadow-lg rounded-3 me-lg-5">
 						  <p class="my-4 px-1">
@@ -330,10 +334,10 @@
 			<!-- FAQ Section Start -->
 			<section class="faq container py-4 px-lg-5">
 				<h3 class="text-center my-5">Frequently Asked Questions</h3>
-			     <div class="row py-4 px-lg-5">
-					 <div class="col-sm-12 col-md-6">
+			     <div class="row py-4 px-lg-5 px-sm-5">
+					 <div class="col-sm-12 col-md-6 left">
 						<div class="accordion" id="accordionExample">
-							<div class="accordion-item">
+							<div class="accordion-item ">
 							  <h2 class="accordion-header" id="headingOne">
 								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 									What’s the difference between event design and event planning? 
@@ -383,7 +387,7 @@
 							</div>
 						  </div>
 					 </div>
-					 <div class="col-sm-12 col-md-6">
+					 <div class="col-sm-12 col-md-6 right">
 						 <img src="images/people.png" alt="people">
 					 </div>
 				 </div>
@@ -427,7 +431,7 @@
 		  </div>
 		  </div>
 	   </footer>
-
+	 
 
 		<!-- Footer End -->
 		<!-- Bootstrap JS CDN Link -->
