carousel heading & description changed

--- a/index.html
+++ b/index.html
@@ -131,10 +131,9 @@
 							alt="wedding_pic"
 						/>
 						<div class="carousel-caption d-md-block">
-							<h5>The perfect venue for your next event</h5>
+							<h5>One Of the Most  Beautifull Platform Ever</h5>
 							<p>
-								The Venue is perfect for you with lucrative design & eye
-								catching interior design
+								The venue is one of the most Beautifull platform with lucrative decoration & natural beauty.
 							</p>
 							<button class="btn btn-light my-3 text-primary">
 								<a href="https://www.bibahabd.com">Book Now</a>
@@ -148,10 +147,9 @@
 							alt="wedding_pic"
 						/>
 						<div class="carousel-caption d-md-block">
-							<h5>The perfect venue for your next event</h5>
+							<h5>The most User friendly Platform Waits for you</h5>
 							<p>
-								The Venue is perfect for you with lucrative design & eye
-								catching interior design
+							   We try to serve our customer with our best effort.So We are one of the most user friendly.
 							</p>
 							<button class="btn btn-light my-3 text-primary">
 								<a href="https://www.bibahabd.com">Book Now</a>
